--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_spinkit: ^5.2.0
+  cupertino_icons: ^1.0.8
+  flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.10+1
   validators: ^3.0.0
   get: ^4.6.6
+  share_plus: ^8.0.3
+  url_launcher: ^6.2.6
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
